# spanner-demo

./: .gitignore  .pre-commit-config.yaml  EXAMPLE.md  README.md  TODO.md  pyproject.toml
docs/decisions/: adr_0001.md  adr_0002.md  adr_0003.md  index.md
src/spanner/: __agent__.py  __chat__.py  __init__.py  __main__.py  prompts.py  query.py  results.py  toolbox.py  tools.py
src/spanner/examples/: genai_list_models.py  genai_nlp_to_sql.py  spanner_query.py  toolbox_get_schema_custom.py  toolbox_get_schema_prebuilt.py
src/spanner/tests/: config.yaml  test_query.py
tests/: config.yaml  conftest.py  test_prompts.py  test_query.py  test_results.py  test_toolbox.py  test_tools.py
toolbox/: prebuilt.yaml  tools.yaml
